# taskmatter

./: .envrc  .gitignore  Dockerfile.dev  Package.resolved  Package.swift  README.md  build-completions.sh  default.nix  flake.nix  pyproject.toml  requirements.txt  setup.py  taskmatter
.helix/: languages.toml
Sources/: Taskmatter.swift
Sources/Taskmatter/: JSONValue.swift
nix/: flake.nix
nix/pkgs/by-name/ta/taskmatter/: package.nix
nix/pkgs/by-name/ta/taskmatter-bin/: package.nix
nix/pkgs/by-name/ta/taskmatter-bin-wrapped/: package.nix
nix/pkgs/by-name/ta/taskmatter/nix/: default.nix  workspace-state.json
scripts/: build-container.sh  build-release.sh  build.sh  enter-container.sh
taskmatter/: main.py
