[tool.poetry]
name = "taskmatter"
version = "0.1.0"
description = "A task management tool that stores tasks as markdown files with properties in their front-matter"
authors = ["Matthew Toohey <contact@mtoohey.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dateparser = "^1.0.0"
python-frontmatter = "^1.0.0"
MonthDelta = "^0.9"
argcomplete = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taskmatter = "taskmatter:main"
